--- a/tutorial.html
+++ b/tutorial.html
@@ -24,7 +24,7 @@
         esriConfig.apiKey = "AAPK81791a151ea04ab283398dd23288b2545NRSEC3R7H5hpJZdRUt05v51lIH1o6uGiGyzv4CJ-rZ2jyzGTWAnacUS0msrA6_7";
 
         const map = new Map({
-          basemap: "arcgis-topographic" // basemap styles service
+          basemap: "arcgis-imagery" // basemap styles service
         });
 
         const view = new MapView({
