--- a/tutorial2.html
+++ b/tutorial2.html
@@ -28,7 +28,7 @@
   esriConfig.apiKey = "AAPKea6d37ba40b14c7d94158cefd1dc673dAjY_1swp_CkZNZCJCMVM4BhFqNXsWGuGnsecbuBhhEvAe2FWEKgt9tP54ZV6LTwV";
 
   const map = new Map({
-    basemap: "arcgis-topographic" // basemap styles service
+    basemap: "arcgis-imagery" // basemap styles service
   });
 
   const view = new MapView({
